# JLAW

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  100_PERCENT_VERIFICATION_COMPLETE.md  =1.5.0  =7.4.0  ADVANCED_STATUTE_INTEGRATION_CHECKLIST.md  ADVANCED_STATUTE_INTEGRATION_COMPLETE.md  ADVANCED_STATUTE_INTEGRATION_QUICK_REFERENCE.md  ADVANCED_STATUTE_INTEGRATION_SUMMARY.md  AGENTS.md  AGENT_REGISTRY_IMPLEMENTATION.md  AGENT_SDK_PHASE_2_3_COMPLETE.md  AGENT_SDK_QUICK_STATUS.md  ANALYSIS_COMPLETE_20251130.md  ANALYSIS_IN_PROGRESS.md  ANTHROPIC_DIRECT_API_SUCCESS.md  API_SETUP.md  BENCHMARK_GOLDSTANDARD.md  BENCHMARK_SUCCESS_REPORT.md  BENEFICIAL_OWNERSHIP_IMPLEMENTATION_SUMMARY.md  BLUEPRINT_INTEGRATION_SUMMARY.md  CHANGELOG.md  COMPLETE_FILING_COVERAGE.md  COMPLETE_ISSUE_ANALYSIS.md  COMPLETE_REQUIREMENT_VERIFICATION.md  COMPLIANCE_VERIFICATION_REPORT.md  CONFIG_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DEEP_FORENSIC_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_REPORT.txt  DEPLOYMENT_CONFIRMATION.md  DEPLOYMENT_EXECUTION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LIVE_STATUS.md  DEPLOYMENT_READY.md  (+352 more)
.claude/: SUBAGENT_INTEGRATION.md
.github/: copilot-instructions.md
.jlaw_patch_backup/: benfords_law_analyzer.py.20251130_162743.bak  entity_resolver.py.20251130_162743.bak
agents/: investigative_claim_verifier.md
compliance/: bates_stamping_metadata.json  chain_of_custody_report_template.md  cryptographic_methods_documentation.md  evidence_authentication_affidavit_template.md  fre_902_certification_checklist.md
config/: __init__.py  analysis_template.yaml  apple_2023.yaml  docsgpt_integration.yaml  enhanced_analysis_config.yaml  fortified_nodes_config.py  nike_2019.yaml  secure_config.py  strict_execution_config.py  unified_forensic.yaml
coverage_report/: class_index.html  function_index.html  index.html  status.json  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_agent_registry_py.html  z_0618756b1ff51bca_autonomous_executor_py.html  z_0618756b1ff51bca_batch_forensic_orchestrator_py.html  z_0618756b1ff51bca_circuit_breaker_py.html  z_0618756b1ff51bca_data_contracts_py.html  z_0618756b1ff51bca_exceptions_py.html  z_0618756b1ff51bca_execution_audit_py.html  z_0618756b1ff51bca_forensic_meta_orchestrator_py.html  z_0618756b1ff51bca_intelligent_orchestrator_py.html  z_0618756b1ff51bca_logging_config_py.html  z_0618756b1ff51bca_master_execution_controller_py.html  z_0618756b1ff51bca_phase_execution_framework_py.html  z_0618756b1ff51bca_phase_gate_validator_py.html  z_0618756b1ff51bca_recursive_analysis_engine_py.html  z_0618756b1ff51bca_recursive_engine_integration_py.html  z_0618756b1ff51bca_recursive_engine_py.html  z_0618756b1ff51bca_retry_handler_py.html  z_0618756b1ff51bca_scheduler_py.html  z_0618756b1ff51bca_security_hardening_py.html  z_0618756b1ff51bca_strict_execution_controller_py.html  z_0618756b1ff51bca_supreme_orchestrator_py.html  z_0618756b1ff51bca_unified_agent_orchestrator_py.html  z_0618756b1ff51bca_unified_orchestrator_py.html  z_08f579cf0e21f075___init___py.html  z_08f579cf0e21f075_budget_enforcer_py.html  z_08f579cf0e21f075_optimization_analyzer_py.html  z_08f579cf0e21f075_performance_metrics_py.html  z_08f579cf0e21f075_timeline_visualizer_py.html  z_0e82f9d053f29e3a___init___py.html  z_0e82f9d053f29e3a_market_data_client_py.html  z_0e82f9d053f29e3a_material_event_correlator_py.html  z_0e82f9d053f29e3a_material_event_correlator_v2_py.html  z_0f33ba38d6bf8205___init___py.html  z_0f33ba38d6bf8205_metrics_py.html  z_148c4bdfdd3fd6bf___init___py.html  (+271 more)
cypher/: neo4j_schema.cypher
data/: README.md
deployment/: prometheus.yml
docs/: ACTOR_MAPPING_IMPLEMENTATION.md  AI_CROSS_VALIDATION_IMPLEMENTATION.md  API_SETUP_GUIDE.md  COMPLIANCE_ANALYZER.md  DOCUMENT_EXTRACTION_SYSTEM.md  ENFORCEMENT_ROUTING_GUIDE.md  EXECUTIVE_SUMMARY_20251130.md  JLAW_VERIFICATION_REPORT_20251130.md  MIGRATION_LINEAR_TO_MASTER.md  MIGRATION_V2_TO_V3.md  MULTI_JURISDICTIONAL_COMPLIANCE.md  PHASE4_REPORTING_IMPLEMENTATION.md  RATE_LIMITING_IMPLEMENTATION.md  REMOVING_SECRETS.md  RIM_PHASE1_IMPLEMENTATION.md  SEC_API_SETUP.md  SEC_EDGAR_DATA_SOURCES_RESEARCH.md  STRICT_MODE_TROUBLESHOOTING.md  TEMPORAL_MODULE_RESOLUTION.md  UNIFIED_FORENSIC_SYSTEM.md  agent_registry.md  api_reference.md  execution_flow_diagram.md  index.md  integration_guide.md  intelligent_routing.md  optimization_guide.md  performance_profiling.md  quickstart.md  sdk_integration.md  system_architecture.md  temporal_clustering_module.md  troubleshooting.md  unified_orchestration.md
dossiers/: JLAW-DOSSIER-20251124-053144.json  JLAW-DOSSIER-20251124-054327.json  JLAW-DOSSIER-20251124-061256.json  JLAW-DOSSIER-20251124-062041.json  JLAW-DOSSIER-20251124-062343.json  JLAW-DOSSIER-20251124-070724.json  JLAW-DOSSIER-20251124-081045.json  JLAW-DOSSIER-20251124-081413.json  JLAW-DOSSIER-20251124-082154.json  JLAW-DOSSIER-20251124-083151.json  JLAW-DOSSIER-20251124-090551.json  JLAW-DOSSIER-20251124-090913.json  JLAW-DOSSIER-20251124-091525.json  JLAW-DOSSIER-20251124-104935.json  JLAW-DOSSIER-20251124-105157.json  JLAW-DOSSIER-20251124-105703.json  JLAW-DOSSIER-20251124-115850.json  JLAW-DOSSIER-20251124-235713.json  JLAW-DOSSIER-20251206-050759.json  JLAW-DOSSIER-20251206-050817.json  JLAW-DOSSIER-20251206-050954.json  JLAW-DOSSIER-20251208-001501.json  JLAW-DOSSIER-20251208-003444.json  JLAW-DOSSIER-20251208-052805.json
examples/: README.md  advanced_analytics_integration.py  agent_registry_demo.py  ai_cross_validation_example.py  beneficial_ownership_demo.py  event_proximity_demo.py  sec_acquisition_usage.py  sec_document_validation_demo.py  sec_edgar_bulletproof_example.py  simple_usage.py  temporal_clustering_demo.py  zero_dollar_acquisition_demo.py  zero_dollar_evidence_demo.py  zero_dollar_foundation_demo.py  zero_dollar_orchestration_demo.py
forensic_reports/: NITS_UNIFIED_REPORT_NITS_NikeInc._20251204_004957_20251203_185044.txt  NITS_UNIFIED_RESULTS_NITS_NikeInc._20251204_004957_20251203_185044.json  analysis_summary_20251129_021218.json  (+9 more)
(+1146 files in other folders)
