[project]
name = "jlaw-forensics"
version = "4.1.0"
description = "JLAW SEC Forensic Financial Analysis System - 15-Node Recursive Prosecutorial Engine with 100% Document Format Coverage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "JLAW Development Team" }]
keywords = ["SEC", "EDGAR", "forensics", "financial-analysis", "XBRL", "Form4", "document-parsing", "10-K", "10-Q"]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # HTTP & Async
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "httpx>=0.27.0",
    
    # Data Processing
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # ML/NLP
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "xgboost>=2.0.0",
    
    # AI/ML Clients (REQUIRED for dual validation)
    "anthropic>=0.86.0",
    "openai>=1.10.0",
    
    # Cryptography & Evidence Chain
    "cryptography>=41.0.0",
    "rfc3161ng>=2.1.0",
    
    # Databases
    "neo4j>=5.15.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    
    # SEC/Financial Analysis
    "benford-py>=0.5.0",
    "sec-edgar-downloader>=5.0.0",
    "edgar>=5.0.0",
    "python-xbrl>=1.1.0",
    "ixbrlparse>=0.9.0",
    
    # Market Data (Optional)
    "polygon-api-client>=1.12.0",
    
    # Parsing & Extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    
    # Document Parsing Enhancement v4.1.0
    "arelle-release>=2.3.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # Logging & Reporting
    "structlog>=24.1.0",
    "reportlab>=4.0.0",
    
    # System Monitoring
    "psutil>=5.9.0",
    
    # Typing
    "typing-extensions>=4.12.0",
]

[project.urls]
Repository = "https://github.com/TIMMAYTHETOOLMANN/JLAW"
Documentation = "https://github.com/TIMMAYTHETOOLMANN/JLAW/blob/main/README.md"

[project.scripts]
jlaw = "jlaw_cli:main"
jlaw-preflight = "scripts.preflight_check:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "coverage>=7.4.0",
]
viz = [
    "graphviz>=0.17",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["src"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "circuit_breaker: Circuit breaker tests",
]
addopts = [
    "--cov=src",
    "--cov-report=html:coverage_report",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage_report"
